--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -45,5 +45,7 @@
           <a href="forget" class="forgetBtn">Forget password?</a>
       </div></form>
       </div>
+
+      <script src="/js/signupScript.js"></script>
 </body>
 </html>
