Complete Login Page

--- a/views/welcomeHost.ejs
+++ b/views/welcomeHost.ejs
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcomeHost</title>
+    <link rel="shortcut icon" href="./image/icon.jpg" type="image/x-icon">
+
+<style>
+
+h1{
+    color:skyblue;
+    text-align: center;
+}
+
+</style>
+
+
 </head>
 <body>
     <h1>Wecome Host you can control all meeting</h1>
