--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>forget</title>
     <link rel="stylesheet" href="./css/forgetStyle.css">
+    <link rel="shortcut icon" href="./image/icon.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
