--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
     <link rel="stylesheet" href="./css/signupStyle.css">
+    <link rel="shortcut icon" href="./image/icon.jpg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
