--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcom</title>
+    <title>Welcome</title>
+    <link rel="shortcut icon" href="./image/icon.jpg" type="image/x-icon">
+
+    <style>
+
+        h1{
+            color:skyblue;
+            text-align: center;
+        }
+        
+        </style>
 </head>
 <body>
     <h1>Welcome</h1>
