--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -12,7 +12,7 @@
     <div class="container">
         <form method="POST" class="forgetBox">
             <div class="textBox">Forget Password</div>
-            <span class="des">Enter your email address or Phone Number, that is connect with my Board</span>
+            <span class="des">Enter your email address, that is connect with my Board</span>
             <input type="email" name="email" class="emailId" placeholder="Email or Phone Number">
            <div class="btn">
             <button type="submit"  class="submitBtn">Submit</button>
