--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -13,7 +13,7 @@
         <form method="POST" class="forgetBox">
             <div class="textBox">Forget Password</div>
             <span class="des">Enter your email address, that is connect with my Board</span>
-            <input type="email" name="email" class="emailId" placeholder="Email or Phone Number">
+            <input type="email" name="email" class="emailId" placeholder="Enter your email address">
            <div class="btn">
             <button type="submit"  class="submitBtn">Submit</button>
         </div>
