--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
             type="email"
             name="email"
             class="inputEmail"
-            placeholder="Enter your email or Phone Number"
+            placeholder="Enter your email Address"
             />
             <input
             type="password"
