--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -89,6 +89,10 @@ body ,.container{
 .signupBtn{
   font-size: 22px;
   text-decoration: none;
+   text-decoration: underline;
+  text-decoration-color:#decba4;
+  text-decoration-style:solid;
+  text-shadow: 0px 0px 8px purple;
 }
 a{
   color: #f0f0d8;
